# EMLvp

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  environment-min.yml  environment.yml  pixi.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
documentation/source/: conf.py  index.rst
src/emlvcc/: exceptions.py  validator.py
src/emlvp/: __init__.py  changelog.md  config.py.template  dereferencer.py  emlvp_cli.py  exceptions.py  normalizer.py  parser.py  unicode_inspector.py  validator.py
tests/: __init__.py  conftest.py  test_dereferencer.py  test_normalizer.py  test_parser.py  test_unicode.py  test_validator.py
tests/data/: eml-2.2.0-circular-reference.xml  eml-2.2.0-dereference.xml  eml-2.2.0-duplicate-id.xml  eml-2.2.0-fail-slow.xml  eml-2.2.0-invalid.xml  eml-2.2.0-missing-annotation-parent-id.xml  eml-2.2.0-missing-annotation-references-id.xml  eml-2.2.0-missing-custom-unit-id.xml  eml-2.2.0-missing-custom-unit.xml  eml-2.2.0-missing-describes-id.xml  eml-2.2.0-missing-eml-tag.xml  eml-2.2.0-missing-package-id.xml  eml-2.2.0-missing-reference-id.xml  eml-2.2.0-syntax-error.xml  eml-2.2.0-system-inconsistency.xml  eml-2.2.0-unicode.xml  eml-2.2.0.xml
