[project]
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
dependencies = [
  "lxml>=5.3.0,<6",
  "click>=8.1.7,<9",
  "daiquiri>=3.0.0,<4",
  "pip>=24.3.1,<25",
]
name = "EMLvp"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.11"
dynamic = ["version"]

[project.scripts]
emlvp = "emlvp.emlvp_cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/emlvp/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
