[emlvcc]
name =  emlvp
version = file: src/emlvp/VERSION.txt
author = Mark Servilla
author_email = mark.servilla@gmail.com
description = EMLvp (Ecological Metadata Lanaguage validator and parser)
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/servilla/EMLvp
project_urls =
    Bug Tracker = https://github.com/servilla/EMLvp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires =  >=3.10
install_requires =
    lxml>=4.9.2

[options.packages.find]
where = src
include = emlvp
